--- a/pom.xml
+++ b/pom.xml
@@ -18,14 +18,17 @@
       <version>5.1.1</version>
     </dependency>
 
+    <!-- https://mvnrepository.com/artifact/javax.servlet/javax.servlet-api -->
+    <dependency>
+      <groupId>javax.servlet</groupId>
+      <artifactId>javax.servlet-api</artifactId>
+      <version>3.1.0</version>
+      <scope>provided</scope>
+    </dependency>
+
+
   </dependencies>
-  <!-- https://mvnrepository.com/artifact/javax.servlet/javax.servlet-api -->
-  <dependency>
-    <groupId>javax.servlet</groupId>
-    <artifactId>servlet-api</artifactId>
-    <version>2.5</version>
-    <scope>provided</scope>
-  </dependency>
+
 
 
 <build>
